<resources>
    <string name="app_name">My Application</string>
    <string name="bt_person">Person</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="rb1">Male</string>
    <string name="rb2">Female</string>
    <string name="flayout">FrameLayout</string>
    <string name="llayout">Linear Layout</string>
    <string name="tlayout">Table Layout</string>
    <string name="rlayout">Relative Layout</string>
</resources>